# eomatch

./: .gitignore  .gitlab-ci.yml  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
deploy/: .env.example  README.md  docker-compose.yml
deploy/browser/: Dockerfile  config.js.example
deploy/browser/theme/: custom.scss.example  variables.scss.example
deploy/filter-proxy/: Dockerfile  main.py
deploy/nginx/: entrypoint.sh  nginx.conf.template
docs/: conf.py  index.rst
docs/content/developer/: developer_guide.rst  internal_api.rst
docs/content/user/: analysis_assets.rst  api.rst  catalogue.rst  central_catalogue.rst  configuration.rst  datasets.rst  enrichment.rst  external_guide.rst  finding_matchups.rst  previews.rst  user_guide.rst
docs/design/: api_architecture.md  deployment_guide.md
eomatch/: __init__.py  add_asset.py  config.py  context.py  datatree.py  deps.py  domain.py  find_and_catalogue.py  generate_previews.py  ingest.py  manage_products.py  mu_stac.py  preview.py  query.py  status.py
eomatch/enrich/: __init__.py  geometric.py  land_fraction.py  solar_elevation.py  time_diff.py
eomatch/enrich/tests/: test_enrich.py  test_enrichers.py
eomatch/etc/: __init__.py  default_config.yaml  user_config.yaml
eomatch/finder/: base.py  sat2insitu.py  sat2sat.py
eomatch/finder/tests/: matchup_event_2_platforms.json  matchup_event_3_platforms.json  test_base.py  test_sat2insitu.py  test_sat2sat.py
eomatch/tests/: conftest.py  test_add_asset.py  test_datatree.py  test_domain.py  test_mu_stac.py  test_preview.py  test_query.py  test_status.py
example/: 01_find_and_catalogue.ipynb  02_explore_catalogue.ipynb  03_load_matchup_dataset.ipynb  04_central_catalogue.ipynb  find_and_catalogue.yaml
quality_documentation/: QualityDocumentation.tex
quality_documentation/base/: CookiecutterMacros.tex
